--- a/week-3/creating_styles_wJS/create_styles.css
+++ b/week-3/creating_styles_wJS/create_styles.css
@@ -1,5 +1,5 @@
 .border {
-    color: 2px solid black;
-    padding:5px;
-    margin:5px;
-}
+    border: 2px solid black;
+    padding: 5px;
+    margin: 5px;
+} 
